--- a/SharkConfig.h.in
+++ b/SharkConfig.h.in
@@ -4,4 +4,5 @@
 
 #define ENABLE_PG_SDK @ENABLE_PG_SDK@
 #define ENABLE_RASPICAM @ENABLE_RASPICAM@
-#define ENABLE_CAR @ENABLE_CAR@
+#define ENABLE_WIRING_PI @ENABLE_WIRING_PI@
+#define ENABLE_RPLIDAR @ENABLE_RPLIDAR@
