--- a/contrib/mcqueen/car/CMakeLists.txt
+++ b/contrib/mcqueen/car/CMakeLists.txt
@@ -3,4 +3,4 @@ add_library(car Car.cpp Gpio.cpp I2cBus.cpp PCA9685.cpp Pin.cpp PwmEsc.cpp PwmSe
 
 # Make sure the compiler can find include files for our car library
 # when other libraries or executables link to Hello
-target_include_directories (car PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (car PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ../../wiring_pi_lite)
