--- a/SharkConfig.h.in
+++ b/SharkConfig.h.in
@@ -6,3 +6,5 @@
 #define ENABLE_RASPICAM @ENABLE_RASPICAM@
 #define ENABLE_WIRING_PI @ENABLE_WIRING_PI@
 #define ENABLE_RPLIDAR @ENABLE_RPLIDAR@
+#define ENABLE_BRZY_SLAM @ENABLE_BRZY_SLAM@
+
